<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#676570"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calendar_title"
        android:textColor="#EEEEEE"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/cal_calendar_text"
        />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/cal_calendar_view"
        android:layout_width="match_parent"
        app:mcv_selectionColor="#8271BD"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingTop="10dp"
        android:background="@drawable/rounded_button_lightpurple"
        app:layout_constraintBottom_toTopOf="@id/cal_add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal_calendar_text"
        app:mcv_tileHeight="32dp"
        />

    <Button
        android:id="@+id/cal_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button_purple"
        android:text="@string/add_btn"
        android:textColor="#EEE"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/cal_birthday_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal_calendar_view"
        />

    <TextView
        android:id="@+id/cal_birthday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#EEEEEE"
        android:text="@string/cal_birth_month"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cal_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/cal_add_btn"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cal_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cal_birthday_text"
        />
</androidx.constraintlayout.widget.ConstraintLayout>